@@ -76,6 +76,10 @@ The following error classes exists in Werkzeug:
     Raise if the server used a method the resource does not handle.  For
     example `POST` if the resource is view only.  Especially useful for REST.
 
+    The first argument for this exception should be a list of allowed methods.
+    Strictly speaking the response would be invalid if you don't provide valid
+    methods in the header which you can do with that list.
+
 *406* `Not acceptable`
     Raise if the server cant return any content conforming to the
     `Accept` headers of the client.
@@ -144,3 +148,12 @@ This is the minimal code you need for your own exception.  If you want to
 add more logic to the errors you can override the `get_description()`,
 `get_body()`, `get_headers()` and `get_response()` methods.  In any case
 you should have a look at the sourcecode of the exceptions module.
+
+**New in Werkzeug 0.2** You can override the default description in the
+constructor with the `description` parameter (it's the first argument for
+all exceptions except of the `MethodNotAllowed` which accepts a list of
+allowed methods as first argument).
+
+.. sourcecode:: python
+
+    raise BadRequest('Request failed because the X parameter was not present')
